Get liked sales
